// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.leaderless.database";
option java_outer_classname = "DatabaseProto";
option objc_class_prefix = "DB";

package database;

// The greeting service definition.
service DatabaseRequests {
  // Sends a greeting
  rpc Get (GetRequest) returns (GetReply) {}
  rpc Create (CreateRequest) returns (CreateReply) {}
  rpc Update (UpdateRequest) returns (UpdateReply) {}
  rpc Delete (DeleteRequest) returns (DeleteReply) {}
}

// The request message containing the user's name.
message GetRequest {
  string name = 1;
}

message CreateRequest {
  string name = 1;
  string data = 2;
}

message UpdateRequest {
  string name = 1;
  string data = 2;
}

message DeleteRequest {
  string name = 1;
}

// The response message containing the greetings
message GetReply {
  string name = 1;
  string data = 2;
}

message CreateReply {
  bool created = 1;
}

message UpdateReply {
  bool updated = 1;
}

message DeleteReply {
  bool deleted = 1;
}
